--- a/main.html
+++ b/main.html
@@ -10,6 +10,51 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div><img height=150 src="https://media.licdn.com/dms/image/C5603AQE76ahQVP-yDQ/profile-displayphoto-shrink_800_800/0/1605883679315?e=2147483647&v=beta&t=7fPM_8nsRmGrTarditmdhAldOt4Ems5bkYRsY_Tdu9I">
+	<u><h1 id=pp>PRASHIL PATEL</h1></u>
+	<a id=ld href="https://www.linkedin.com/in/prashil-patel-29b743186">Linkedin-prashil-patel-29b743186</a>
+</div>
+	<br>
+	<br>
+	<br>
+	<section>
+		<h2>Skills</h2>
+		<ul>
+			<li>JAVA</li>
+			<li>Problem-Solving</li>
+			<li>Java Swing</li>
+			<li>Spring-boot</li>
+			<li>DSA</li>
+			<li>OOPS</li>
+			<li>Software Testing</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>MySql</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Projects</h2>
+		<ul>
+			<h3><li>Student Result Management Portal (JAVA +
+MySQL) (11/2022)</li></h3>
+		<ul><li>	<p>Portal built for admins, teachers and students where
+admins have permissions to manage teacher's details, teachers can manage student's details and their results, and students can view their exam results.</p></li>
+		<li>	<a href="https://drive.google.com/file/d/1Yhd4X8bbPRvyw7uzucGj5Vu9t-c4dpS3/view">Demo video</a>
+			<a href="https://github.com/PRASHIL3108/Student-Result-Management-Portal">GitHub Repository</a>
+		</li></ul>	<h3><li>Brick Breaker Game (JAVA + 2D Graphics)
+(11/2022)</li></h3>
+			<ul><li><p>It has a small ball that hits the bricks with the help of a
+little platform at the bottom. The player uses this
+platform to bounce the ball. The more you break the
+bricks, the more you score. If you miss the ball to bounce
+then game over.</li>
+				<li>It is implemented using Java AWT graphics library to
+model the movement of the ball and platform, and to
+listen to the key press actions by the user. </li>
+				
+</p></ul>
+		</ul>
+	</section>
 
 </body>
 
