--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	<br>
 	<br>
 	<br>
-	<section>
+	<section id="skills">
 		<h2>Skills</h2>
 		<ul>
 			<li>JAVA</li>
@@ -32,7 +32,7 @@
 			<li>MySql</li>
 		</ul>
 	</section>
-	<section>
+	<section id="projects">
 		<h2>Projects</h2>
 		<ul>
 			<h3><li>Student Result Management Portal (JAVA +
