--- a/main.html
+++ b/main.html
@@ -59,8 +59,8 @@
                platform to bounce the ball. The more you break the
                bricks, the more you score. If you miss the ball to bounce
                then game over.
-        
-        It is implemented using Java AWT graphics library to
+			</p>
+   <p>     It is implemented using Java AWT graphics library to
             model the movement of the ball and platform, and to
             listen to the key press actions by the user. 
        
